# scorpio_zadanie_rekrutacyjne_software

./: CMakeLists.txt
launch/: autonomy_simulator.launch
src/Brain/: BigBrain.cpp  SmallBrain.cpp
src/Brain/include/: BigBrain.hpp  BigBrainIfc.hpp  SmallBrain.hpp
src/GoalSetter/: GoalSetter.cpp  GoalSetter.hpp  gs_run.cpp
src/Graph/: Graph.hpp
src/PathSolver/: PathSolver.cpp  PathSolver.hpp  ps_run.cpp
src/z2/: reader.cpp  z2.cpp
